buildscript {
	repositories {
		mavenLocal()
		mavenCentral()
		maven {
			url "https://plugins.gradle.org/m2/"
		}
	}

	dependencies {
		classpath 'com.google.gradle:osdetector-gradle-plugin:1.6.0'
	}
}
plugins {
	id 'java-library'
	id "io.freefair.lombok" version "5.0.0-rc2"
}

group 'io.freefair'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.13

repositories {
	mavenCentral()
}

ext.platform = osdetector.os == 'osx' ? 'mac' : osdetector.os == 'windows' ? 'win' : osdetector.os

dependencies {
	testImplementation group: 'junit', name: 'junit', version: '4.12'
	api 'org.springframework:spring-core:5.0.3.RELEASE'
	api 'org.springframework:spring-context:5.0.3.RELEASE'
	api 'org.slf4j:slf4j-log4j12:1.7.25'
	api 'log4j:log4j:1.2.17'
	api 'io.github.classgraph:classgraph:4.8.65'

	api "org.openjfx:javafx-base:13.0.2:$platform"
	api "org.openjfx:javafx-fxml:13.0.2:$platform"
	api "org.openjfx:javafx-graphics:13.0.2:$platform"
	api "org.openjfx:javafx-controls:13.0.2:$platform"
}

/*compileJava {
	doFirst {
		options.compilerArgs = [
				'--module-path', classpath.asPath,
				'--add-modules', 'javafx.controls,javafx.graphics,javafx.fxml,javafx.base'
		]
	}
}*/
